--- a/src/app/modules/dashboard/components/file-actions/file-actions.component.less
+++ b/src/app/modules/dashboard/components/file-actions/file-actions.component.less
@@ -2,6 +2,9 @@
   margin-right: 5px;
 }
 
+.mat-list-base .mat-list-item {
+  font-size: 15px;
+}
 
 .action-toolbar {
   display: flex;
@@ -18,4 +21,8 @@
 
 .list-icon {
   margin-left: auto;
+}
+
+.action-0 {
+  margin-bottom: 10px;
 }
