--- a/src/app/modules/dashboard/components/repository/repository.component.less
+++ b/src/app/modules/dashboard/components/repository/repository.component.less
@@ -1,14 +1,123 @@
 /* Structure */
 
 .repository-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+  // grid-gap: 10px;
+  grid-template-rows: 60px auto;
+
   height: 100%;
   width: 100%;
   padding: 10px;
-  background-color: rgb(255, 255, 255)
+  background-color: #fff;
+
+  overflow: hidden;
+}
+
+.repository-data {
+  grid-column: 1 / span 4;
+}
+
+.repository-search {
+  grid-column: span 2;
+  padding: 0;
+}
+
+.repository-sidebar {
+  grid-column: span 1;
+  overflow-y: scroll;
+}
+
+.repository-actions {
+  grid-column: 1 / span 4;
+}
+
+.repository-breadcrumbs {
+  grid-column: 1 / span 3;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+@media (max-width: 1300px) {
+  
+  .repository-breadcrumbs {
+    grid-column: 1 / span 2;
+  }
+
+  .repository-search {
+    grid-column: span 2;
+  }
+
+  .repository-container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 60px auto;
+  }
+
+  .repository-data {
+    grid-column: 1 / span 3;
+    margin-right: 0;
+  }
+  
+}
+
+@media (max-width: 1100px) {
+  .sidebar-card {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .repository-sidebar {
+    display: none;
+  }
+
+  .repository-data {
+    grid-column: 1 / span 4;
+  }
+
+  div.repository-actions {
+    display: inline-block;
+  }
+
+  .repository-container {
+    grid-template-rows: 60px 60px auto;
+  }
+
+  div.table-container {
+    height: 80vh;
+  }
+}
+
+@media (max-width: 700px) {
+
+  .repository-breadcrumbs {
+    grid-column: 1 / span 4;
+  }
+
+  .repository-search {
+    grid-column: span 4;
+  }
+
+  div.repository-actions {
+    display: none;
+  }
+}
+
+.repository-actions {
+  display: none;
 }
 
 table {
   width: 100%;
+}
+
+.table-container {
+  overflow: auto;
+  height: 86vh;
 }
 
 th, td {
@@ -20,6 +129,14 @@ th, td {
 
 .mat-column-action {
   flex: 0 0 30px;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
+  margin: 0 !important;
 }
 
 .loading-shade {
@@ -37,7 +154,7 @@ th, td {
   margin: 15px;
 }
 
-/* Column Widths */
+/* Table Column Widths */
 .mat-column-createdDate {
   width: 120px;
 }
@@ -82,7 +199,11 @@ th, td {
 
 .path-card {
   padding: 8px 18px;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
+}
+
+.sidebar-card {
+  padding: 8px;
 }
 
 
@@ -121,7 +242,10 @@ a.folder-node {
 .mat-row:hover {
   cursor: pointer;
 
-  td.mat-cell.mat-column-name {
+  td.mat-cell.mat-column-name,
+  td.mat-cell.mat-column-createdDate,
+  td.mat-cell.mat-column-members
+  {
     color: blue;
   }
 }
