--- a/src/app/modules/dashboard/components/entity-info/entity-info.component.less
+++ b/src/app/modules/dashboard/components/entity-info/entity-info.component.less
@@ -2,6 +2,15 @@ p {
     margin-bottom: 0 !important;
 }
 
+::ng-deep .mat-expansion-panel-body, .mat-expansion-panel-header {
+    padding: 0 !important;
+}
+
+.mat-expansion-panel-header {
+    height: 50px;
+}
+
+
 .entity-container {
     width: 100%;
 }
@@ -39,4 +48,32 @@ p {
 
 table {
   width: 100%;
+  border-collapse: separate;
+}
+
+.default {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.default-font {
+    font-size: 14px;
+}
+
+td.mat-cell {
+    padding: 0 !important;
+}
+
+th.mat-header-cell:first-of-type {
+    padding-left: 0 !important;
+}
+
+.entity-preview {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
