--- a/src/app/modules/dashboard/components/file-actions/file-actions.component.html
+++ b/src/app/modules/dashboard/components/file-actions/file-actions.component.html
@@ -15,7 +15,7 @@
 
     <div [ngSwitch]="mode">
         <div *ngSwitchCase="0">
-            <mat-card class="mat-elevation-z2 px-0">
+            <mat-card class="mat-elevation-z2 px-0 action-0">
                 <mat-action-list>
                     <!-- <button mat-list-item class="px-3" color="primary">Create new file</button> -->
                     <button mat-list-item (click)="fileUploader.click()">
@@ -105,7 +105,7 @@
 </ng-template>
 
 <ng-template #selectedActionCard>
-    <mat-card class="mat-elevation-z2 px-0" *ngIf="mode === 0">
+    <mat-card class="mat-elevation-z2 px-0 action-0" *ngIf="mode === 0">
         <mat-action-list>
             <button mat-list-item>
                 <mat-icon class="mr-2">cloud_download</mat-icon>Download
