--- a/src/app/modules/dashboard/components/main/main.component.less
+++ b/src/app/modules/dashboard/components/main/main.component.less
@@ -165,8 +165,8 @@ p.list-info {
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  margin: 10px;
-  padding: 15px;
+  // margin: 10px;
+  padding: 10px;
 }
 
 .suggestion {
