--- a/src/app/modules/account/pages/account/account.component.scss
+++ b/src/app/modules/account/pages/account/account.component.scss
@@ -1,4 +1,14 @@
+.c-account {
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    &__heading { }
+
+    &__body { }
+}
 
 @media only screen and (max-width: 585px) {
     .mat-card {
