Updated main.layout.component, and entity-info.component styles. Updated backup server for obtaining thumbnail images for files in default-image.directive

--- a/src/app/modules/dashboard/components/entity-info/entity-info.component.scss
+++ b/src/app/modules/dashboard/components/entity-info/entity-info.component.scss
@@ -15,8 +15,8 @@ p {
     width: 100%;
 
     .entity__container-img {
-        width: auto;
-        height: 200px;
+        width: 100%;
+        height: auto;
     }
 }
 
