--- a/src/app/modules/dashboard/components/main/main.layout.component.scss
+++ b/src/app/modules/dashboard/components/main/main.layout.component.scss
@@ -38,7 +38,7 @@ $default-color: rgba(63, 81, 181, 0.228);
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: $component-padding;
 }
 
